--- a/add-produto.html
+++ b/add-produto.html
@@ -105,8 +105,8 @@
 
     <script>
         // --- URL com proxy CORS e novo DEPLOYMENT_ID ---
-        const DEPLOYMENT_ID = 'AKfycbw7KbQMK_69VHQdjblO17ojHmb4RqPrZKpPecrIwHEY6W19bbWD6YiGTx2t9J--9kunAA';
-        const urlScript = 'https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/' + DEPLOYMENT_ID + '/exec';
+        const DEPLOYMENT_ID = 'AKfycbyFVmPFLfed9asgIXPjHTMuAxfkqGJMAuvBCPlgtEjO';
+const urlScript = 'https://script.google.com/macros/s/' + DEPLOYMENT_ID + '/exec';
         // Para produção, substitua por: 'https://your-proxy.com/https://script.google.com/macros/s/' + DEPLOYMENT_ID + '/exec'
 
         const productForm = document.getElementById('productForm');
