--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         if (clickCount === 3) {
           console.log('Três cliques detectados, redirecionando para admin');
           clearTimeout(clickTimer);
-          window.location.href = 'contato.html/?tempToken=triple-click-access';
+          window.location.href = 'add-contato.html/?tempToken=triple-click-access';
           clickCount = 0;
         }
       });
