--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <meta name="twitter:image" content="/logos/logoscentrodecompras.webp">
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com https://www.gstatic.com https://www.googletagmanager.com;
+    script-src 'self' 'nonce-secure123' https://pagead2.googlesyndication.com https://www.gstatic.com https://www.googletagmanager.com https://script.google.com https://script.googleusercontent.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
     img-src 'self' data: https://drive.google.com https://*.googleusercontent.com https://firebasestorage.googleapis.com https://res.cloudinary.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://api-centro-de-compras.onrender.com https://ep1.adtrafficquality.google https://firebase.googleapis.com https://firebaseinstallations.googleapis.com;
+    connect-src 'self' https://api-centro-de-compras.onrender.com https://ep1.adtrafficquality.google https://firebase.googleapis.com https://firebaseinstallations.googleapis.com https://script.google.com https://script.googleusercontent.com;
     frame-src 'self' https://googleads.g.doubleclick.net;
   ">
   <title>Centro de Compras - Ofertas do Dia</title>
@@ -31,6 +31,18 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/logos/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/logos/apple-touch-icon.png">
   <link rel="manifest" href="/logos/site.webmanifest">
+  <style>
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      border: 0;
+    }
+  </style>
 </head>
 <body>
   <header class="site-header" role="banner">
@@ -115,7 +127,7 @@
              style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-4531749081462125"
              data-ad-slot="5690664546"></ins>
-        <script>
+        <script nonce="secure123">
           (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
         <div class="lojas-parceiras">
@@ -170,14 +182,14 @@
         </div>
         <label for="busca" class="sr-only">Busque por produtos</label>
         <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-describedby="busca-feedback">
-        <div id="busca-feedback" class="busca-feedback"></div>
+        <div id="busca-feedback" class="busca-feedback" aria-live="polite"></div>
         <div class="loading-spinner" id="loading-spinner">
           <i class="fas fa-spinner" aria-hidden="true"></i>
           <span class="sr-only">Carregando...</span>
         </div>
         <div class="grid-produtos" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-        <p class="error-message" id="error-message" style="display: none;"></p>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;" aria-live="polite">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;" aria-live="assertive"></p>
         <nav class="paginacao" id="paginacao" aria-label="Navegação de páginas">
           <button id="prev-page" disabled aria-label="Página anterior">Anterior</button>
           <span id="page-info" aria-live="polite">Página 1</span>
@@ -255,10 +267,10 @@
     </a>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
+  <script type="module" nonce="secure123">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-analytics.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDryJc0Y7JV_Os5DZdEDts5XaFUEtJ7wDk",
@@ -278,7 +290,7 @@
     window.firebaseDb = db;
   </script>
   <script defer src="/script.js"></script>
-  <script>
+  <script nonce="secure123">
     document.addEventListener('DOMContentLoaded', () => {
       const logo = document.getElementById('site-logo-img');
       let clickCount = 0;
@@ -313,6 +325,63 @@
 
       // Atualiza o ano no rodapé
       document.getElementById('year').textContent = new Date().getFullYear();
+
+      // Exemplo de chamada à API do Google Apps Script
+      const fetchProducts = async (category = 'todas', store = 'todas', query = '') => {
+        const spinner = document.getElementById('loading-spinner');
+        const errorMessage = document.getElementById('error-message');
+        const feedback = document.getElementById('busca-feedback');
+        spinner.style.display = 'block';
+        errorMessage.style.display = 'none';
+        feedback.textContent = '';
+
+        try {
+          const response = await fetch(`https://script.google.com/macros/s/AKfycbzxU2q5ApfKg0FawUDSfLFskikcggALJWWS0zSfYAA/exec?category=${encodeURIComponent(category)}&store=${encodeURIComponent(store)}&query=${encodeURIComponent(query)}`, {
+            method: 'GET',
+            headers: {
+              'Accept': 'application/json'
+            }
+          });
+
+          if (!response.ok) {
+            throw new Error('Erro ao buscar produtos');
+          }
+
+          const data = await response.json();
+          if (data.success && data.products.length > 0) {
+            renderProducts(data.products);
+            feedback.textContent = `Encontrados ${data.products.length} produtos.`;
+          } else {
+            document.getElementById('mensagem-vazia').style.display = 'block';
+            feedback.textContent = 'Nenhum produto encontrado.';
+          }
+        } catch (error) {
+          errorMessage.textContent = 'Erro ao carregar produtos. Tente novamente mais tarde.';
+          errorMessage.style.display = 'block';
+          console.error('Erro na API:', error);
+        } finally {
+          spinner.style.display = 'none';
+        }
+      };
+
+      // Função placeholder para renderizar produtos (deve ser implementada em script.js)
+      const renderProducts = (products) => {
+        const grid = document.getElementById('grid-produtos');
+        grid.innerHTML = products.map(product => `
+          <div class="produto">
+            <img src="${product.image}" alt="${product.name}" loading="lazy">
+            <h3>${product.name}</h3>
+            <p>${product.price}</p>
+            <a href="${product.link}" target="_blank" rel="noopener noreferrer">Ver Oferta</a>
+          </div>
+        `).join('');
+      };
+
+      // Evento de busca
+      document.getElementById('busca').addEventListener('input', (e) => {
+        const query = e.target.value.trim();
+        fetchProducts('todas', 'todas', query);
+      });
     });
   </script>
 </body>
