--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 clickTimeout = setTimeout(() => { clickCount = 0; }, 500);
             } else if (clickCount === 3) {
                 clearTimeout(clickTimeout);
-                window.location.href = "admin-xyz-123.html";
+                window.location.href = "add-produto.html";
                 clickCount = 0;
             }
         });
